# corecpp

./: CMakeLists.txt  README.md  algorithm.h  corecpp-config.cmake.in  corecpp.pc.in  flags.h  meta.h
examples/: CMakeLists.txt  command.cpp  reflection.cpp  serialization.cpp  serialize_bench.cpp
flags/: flags.h
include/: CMakeLists.txt
include/corecpp/: CMakeLists.txt  algorithm.h  any.h  command_line.h  decimal.h  deferred.h  diagnostic.h  diagnostic_manager.h  event.h  except.h  expected.h  flags.h  graphics.h  lazy.h  meta.h  ref_ptr.h  ring_buffer.h  unittest.h  uuid.h  variant.h  visibility.h  waiting_queue.h
include/corecpp/cli/: CMakeLists.txt  command_line.h  graphics.h  parser.h
include/corecpp/container/: CMakeLists.txt  iterator.h  range.h  ring_buffer.h  shared_vector.h  waiting_queue.h
include/corecpp/meta/: CMakeLists.txt  extensions.h  reflection.h
include/corecpp/net/: CMakeLists.txt  ethernet.h  ip.h  mailaddress.h  uri.h
include/corecpp/serialization/: CMakeLists.txt  common.h  json.BNF  json.h  xml.h
ref_ptr/: ref_ptr.h
src/: CMakeLists.txt  appender.cpp  command_line.cpp  diagnostic_manager.cpp  json.cpp  xml.cpp
tests/: CMakeLists.txt  test_algorithms.cpp  test_command.cpp  test_flags.cpp  test_reflection.cpp  test_serialization.cpp
